--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <textarea id="result-text" rows="8" readonly></textarea>
 
         <button id="execute-button">执行交易</button>
+        <button id="cancel-button" disabled="">停止交易  </button>
     </div>
 
     <script src="script.js"></script>
